# lang-chain-data-analysis

statistics/: Readme.md  docker-compose.yml  requirements.txt
statistics/analytics/: Dockerfile  pyproject.toml
statistics/analytics/src/: entrypoint.sh  main.py
statistics/analytics/src/timeseries/: cointegration.py
statistics/chat_api/: .gitignore  Dockerfile  pyproject.toml
statistics/chat_api/src/: entrypoint.sh  main.py
statistics/chat_api/src/agents/: chat_api_agent.py
statistics/chat_api/src/chains/: stock_cypher_chain.py
statistics/chat_api/src/models/: chat_api_query.py
statistics/chat_api/src/tools/: cointegration.py  wrapper.py
statistics/chat_api/src/tools/math/: stat.py
statistics/chat_bot/: Dockerfile  README.md  pyproject.toml
statistics/chat_bot/src/: entrypoint.sh  main.py
statistics/data/: BTCUSD.csv  ETHUSD.csv
statistics/neo4j-docker-setup/: Dockerfile
statistics/neo4j_etl/: Dockerfile  pyproject.toml
statistics/neo4j_etl/src/: entrypoint.sh  main.py
