[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "chat_api"
version = "0.4"
dependencies = [
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "requests==2.31.0",
    "pydantic",
    "asyncio",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["black", "flake8"]

[tool.setuptools]
packages = {find = {include = ["agents", "models", "tools", "utils"]}}
